--- a/catalog.html
+++ b/catalog.html
@@ -9,187 +9,216 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="main-navigation">
-        <a class="logo" href="index.html">
-          <img src="img/nerds-logo.svg" width="160"
-            height="65" alt="Логотип">
-        </a>
-        <ul class="site-navigation">
-          <li><a href="#">Студия</a></li>
-          <li><a href="#">Клиенты</a></li>
-          <li><a href="#">Магазин</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-        <ul class="user-navigation">
-          <li>
-            <a class="cart" href="cart.html">Корзина</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <h1>Магазин готовых шаблонов</h1>
-      <section class="main-sorting">
-        <h2>Сортировать:</h2>
-        <nav>
-          <ul class="sorting-list">
-            <li><a class="sorting-price" href="#">По цене</a></li>
-            <li><a class="sorting-type" href="#">По типу</a></li>
-            <li><a class="sorting-label" href="#">По названию</a></li>
-            <li><a class="sorting-down" href="#"><img
-              src="img/icon-down-dir.svg" alt="Сортировка по убыванию"></a></li>
-            <li><a class="sorting-up" href="#"><img src="img/icon-up-dir.svg"
-              alt="По возрастанию"></a></li>
+      <div class="container">
+        <nav class="main-navigation">
+          <a class="logo" href="index.html">
+            <img src="img/nerds-logo.svg" width="160"
+              height="65" alt="Логотип">
+          </a>
+          <ul class="site-navigation">
+            <li><a href="#">Студия</a></li>
+            <li><a href="#">Клиенты</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+          <ul class="user-navigation">
+            <li>
+              <a class="cart" href="cart.html">Корзина</a>
+            </li>
           </ul>
         </nav>
-      </section>
-      <section>
-        <h2 class="visually-hidden">Параметры</h2>
-        <form class="catalog-form" action="https://echo.htmlacademy.ru"
-          method="post">
-          <fieldset>
-            <legend>Стоимость</legend>
-            <input type="range" name="range" min="0" max="15000"
-             step="1" value="10000">
-             <p>
-               От <span>0</span> до <span>15000</span>
-             </p>
-          </fieldset>
-          <fieldset>
-            <legend>Сетка</legend>
-            <ul>
-              <li>
-                <input type="radio" name="grid's variant" value="adaptive"
-                  id="filter-adaptive" checked>
-                <label for="filter-adaptive">Адаптивная</label>
+      </div>
+    </header>
+    <main>
+      <div class="inner-heading-container">
+        <h1>Магазин готовых шаблонов</h1>
+      </div>
+      <div class="container inner-main-container">
+        <section class="inner-filter">
+          <h2 class="visually-hidden">Параметры</h2>
+          <form class="catalog-form" action="https://echo.htmlacademy.ru"
+            method="post">
+            <fieldset>
+              <legend>Стоимость</legend>
+              <input type="range" name="range" min="0" max="15000"
+               step="1" value="10000">
+               <p>
+                 От <span>0</span> до <span>15000</span>
+               </p>
+            </fieldset>
+            <fieldset>
+              <legend>Сетка</legend>
+              <ul>
+                <li>
+                  <input type="radio" name="grid's variant" value="adaptive"
+                    id="filter-adaptive" checked>
+                  <label for="filter-adaptive">Адаптивная</label>
+                </li>
+                <li>
+                  <input type="radio" name="grid's variant" value="fixed"
+                    id="filter-fixed">
+                  <label for="filter-fixed">Фиксированная</label>
+                </li>
+                <li>
+                  <input type="radio" name="grid's variant" value="rubber"
+                    id="filter-rubber">
+                  <label for="filter-rubber">Резиновая</label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset>
+              <legend>Особенности</legend>
+              <ul>
+                <li>
+                  <input type="checkbox" name="slider" id="filter-slider" checked>
+                  <label for="filter-slider">Слайдер</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="advantages" id="filter-advantages">
+                  <label for="filter-advantages">Блок преимуществ</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="news" id="filter-news" checked>
+                  <label for="filter-news">Новости</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="gallery" id="filter-gallery">
+                  <label for="filter-gallery">Галерея</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="basket" id="filter-basket">
+                  <label for="filter-basket">Корзина</label>
+                </li>
+              </ul>
+            </fieldset>
+            <button type="submit">Показать</button>
+          </form>
+        </section>
+        <div class="main-sorting-and-examples">
+          <section class="main-sorting">
+            <h2>Сортировать:</h2>
+            <nav>
+              <ul class="sorting-list">
+                <li><a class="sorting-price" href="#">По цене</a></li>
+                <li><a class="sorting-type" href="#">По типу</a></li>
+                <li><a class="sorting-label" href="#">По названию</a></li>
+                <li><a class="sorting-down" href="#"><img
+                  src="img/icon-down-dir.svg" alt="Сортировка по убыванию"></a></li>
+                <li><a class="sorting-up" href="#"><img src="img/icon-up-dir.svg"
+                  alt="По возрастанию"></a></li>
+              </ul>
+            </nav>
+          </section>
+          <section class="section-examples">
+            <h2 class="visually-hidden">Варианты работ</h2>
+            <ul class="work-examples">
+              <li class="work-example-item">
+                <img src="img/sedona.jpg" width="360"
+                  height="576" alt="Sedona">
+                <div class="example-item-information">
+                  <a class="example-item-label" href="#">Sedona</a>
+                  <p class="example-item-description">Информационный сайт для
+                    туристов</p>
+                  <p class="button example-item-price">9 900 руб.</p>
+                </div>
               </li>
-              <li>
-                <input type="radio" name="grid's variant" value="fixed"
-                  id="filter-fixed">
-                <label for="filter-fixed">Фиксированная</label>
+              <li class="work-example-item">
+                <img src="img/pink.jpg" width="360"
+                  height="576" alt="Pink">
+                <div class="example-item-information">
+                  <a class="example-item-label" href="#">Pink App</a>
+                  <p class="example-item-description">Продуктовый лендинг
+                    приложения для iOS и Android</p>
+                  <p class="button example-item-price">9 900 руб.</p>
+                </div>
               </li>
-              <li>
-                <input type="radio" name="grid's variant" value="rubber"
-                  id="filter-rubber">
-                <label for="filter-rubber">Резиновая</label>
+              <li class="work-example-item">
+                <img src="img/barbershop.jpg" width="360" height="576"
+                  alt="Barbershop">
+                <div class="example-item-information">
+                  <a class="example-item-label" href="#">Barbershop</a>
+                  <p class="example-item-description">Сайт салона красоты. Для
+                    мужчин, да.</p>
+                  <p class="button example-item-price">9 900 руб.</p>
+                </div>
+              </li>
+              <li class="work-example-item">
+                <img src="img/mishka.jpg" width="360" height="576" alt="Mishka">
+                <div class="example-item-information">
+                  <a class="example-item-label" href="#">Mishka</a>
+                  <p class="example-item-description">Интернет-магазин
+                    вязаных игрушек</p>
+                  <p class="button example-item-price">9 900 руб.</p>
+                </div>
+              </li>
+              <li class="work-example-item">
+                <img src="img/aplus.jpg" width="360" height="576" alt="A-plus">
+                <div class="example-item-information">
+                  <a class="example-item-label" href="#">A Plus</a>
+                  <p class="example-item-description">Лендинг курсов повышения
+                    квалификации</p>
+                  <p class="button example-item-price">9 900 руб.</p>
+                </div>
+              </li>
+              <li class="work-example-item">
+                <img src="img/kvast.jpg" width="360" height="576" alt="Kvast">
+                <div class="example-item-information">
+                  <a class="example-item-label" href="#">Кваст</a>
+                  <p class="example-item-description">Промо-сайт производителя
+                    крафтового кваса</p>
+                  <p class="button example-item-price">9 900 руб.</p>
+                </div>
               </li>
             </ul>
-          </fieldset>
-          <fieldset>
-            <legend>Особенности</legend>
-            <ul>
-              <li>
-                <input type="checkbox" name="slider" id="filter-slider" checked>
-                <label for="filter-slider">Слайдер</label>
-              </li>
-              <li>
-                <input type="checkbox" name="advantages" id="filter-advantages">
-                <label for="filter-advantages">Блок преимуществ</label>
-              </li>
-              <li>
-                <input type="checkbox" name="news" id="filter-news" checked>
-                <label for="filter-news">Новости</label>
-              </li>
-              <li>
-                <input type="checkbox" name="gallery" id="filter-gallery">
-                <label for="filter-gallery">Галерея</label>
-              </li>
-              <li>
-                <input type="checkbox" name="basket" id="filter-basket">
-                <label for="filter-basket">Корзина</label>
-              </li>
-            </ul>
-          </fieldset>
-          <button type="submit">Показать</button>
-        </form>
-      </section>
-      <section>
-        <h2 class="visually-hidden">Варианты работ</h2>
-        <ul class="work-examples">
-          <li>
-            <img src="img/sedona.jpg" width="360"
-              height="576" alt="Sedona">
-            <div class="example-item">
-              <a class="example-item-label" href="#">Sedona</a>
-              <p class="example-item-description">Информационный сайт для
-                туристов</p>
-              <p class="button example-item-price">9 900 руб.</p>
-            </div>
-          </li>
-          <li>
-            <img src="img/pink.jpg" width="360"
-              height="576" alt="Pink">
-            <div class="example-item">
-              <a class="example-item-label" href="#">Pink App</a>
-              <p class="example-item-description">Продуктовый лендинг
-                приложения для iOS и Android</p>
-              <p class="button example-item-price">9 900 руб.</p>
-            </div>
-          </li>
-          <li>
-            <img src="img/barbershop.jpg" width="360" height="576"
-              alt="Barbershop">
-            <div class="example-item">
-              <a class="example-item-label" href="#">Barbershop</a>
-              <p class="example-item-description">Сайт салона красоты. Для
-                мужчин, да.</p>
-              <p class="button example-item-price">9 900 руб.</p>
-            </div>
-          </li>
-          <li>
-            <img src="img/mishka.jpg" width="360" height="576" alt="Mishka">
-            <div class="example-item">
-              <a class="example-item-label" href="#">Mishka</a>
-              <p class="example-item-description">Интернет-магазин
-                вязаных игрушек</p>
-              <p class="button example-item-price">9 900 руб.</p>
-            </div>
-          </li>
-          <li>
-            <img src="img/aplus.jpg" width="360" height="576" alt="A-plus">
-            <div class="example-item">
-              <a class="example-item-label" href="#">A Plus</a>
-              <p class="example-item-description">Лендинг курсов повышения
-                квалификации</p>
-              <p class="button example-item-price">9 900 руб.</p>
-            </div>
-          </li>
-          <li>
-            <img src="img/kvast.jpg" width="360" height="576" alt="Kvast">
-            <div class="example-item">
-              <a class="example-item-label" href="#">Кваст</a>
-              <p class="example-item-description">Промо-сайт производителя
-                крафтового кваса</p>
-              <p class="button example-item-price">9 900 руб.</p>
-            </div>
-          </li>
-        </ul>
-      </section>
+          </section>
+        </div>
+      </div>
       <section class="adress-and-contacts">
         <h2 class="visually-hidden">Адрес и контакты</h2>
+      <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
+    появится настоящая карта -->
         <img src="img/map.png" alt="Карта" width="1440" height="416">
-        <img class="map-marker" src="img/map-marker.png" alt="Указатель" width="231" height="190">
-        <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
-      появится настоящая карта -->
-      <div class="studio-contacts">
-        <h3 class="studio-label">Nёrds design studio</h3>
-        <p>
-          191186, Санкт-Петербург,<br>
-          ул. Б. Конюшенная, д. 19/8
-        </p>
-        <p>тел. +7 (812) 275-75-75</p>
-        <button class="button" type="button">Напишите нам</button>
-      </div>
+        <div class="map-container">
+          <img class="map-marker" src="img/map-marker.png" alt="Указатель"
+            width="231" height="190">
+          <div class="studio-contacts">
+            <h3 class="studio-label">Nёrds design studio</h3>
+            <p>
+              191186, Санкт-Петербург,<br>
+              ул. Б. Конюшенная, д. 19/8
+            </p>
+            <p>тел. +7 (812) 275-75-75</p>
+            <button class="button" type="button">Напишите нам</button>
+          </div>
+        </div>
       </section>
     </main>
-    <footer class="main-footer">
+    <footer class="main-footer container">
         <ul class="social-networks">
-          <li><a class="logo-vk" href="https://vk.com" aria-label="Вконтакте">
-          Вконтакте</a></li>
-          <li><a class="logo-fb" href="https://facebook.com"
-            aria-label="Фэйсбук">Фэйсбук</a></li>
-          <li><a class="logo-insta" href="https://instagram.com"
-            aria-label="Инстаграм">Инстаграм</a></li>
+          <li>
+            <a class="social-button" href="https://vk.com">
+              <span class="visually-hidden">Вконтакте</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
+                <path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="social-button" href="https://facebook.com">
+              <span class="visually-hidden">Фэйсбук</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                  <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="social-button" href="https://instagram.com">
+              <span class="visually-hidden">Инстаграм</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                  <path fill="#fff" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18zm0-11h-4V3h4z"/>
+              </svg>
+            </a>
+          </li>
         </ul>
         <div class="footer-social">
           <p class="footer-social-motto">Давайте дружить, это выгодно!</p>
@@ -197,7 +226,7 @@
             сетей.</p>
         </div>
     </footer>
-    <section class="pop-up">
+    <section class="pop-up visually-hidden">
       <h2>Напишите нам</h2>
       <form action="https://echo.htmlacademy.ru" method="post">
         <p>
