--- a/catalog.html
+++ b/catalog.html
@@ -156,7 +156,10 @@
                 <div class="example-item-information">
                   <a class="example-item-label" href="#">Barbershop</a>
                   <p class="example-item-description">Сайт салона красоты. Для
-                    мужчин, да.</p>
+                    мужчин, да. Сайт салона красоты. Для
+                      мужчин, да. Сайт салона красоты. Для
+                        мужчин, да. Сайт салона красоты. Для
+                          мужчин, да.</p>
                   <p class="button example-item-price">9 900 руб.</p>
                 </div>
               </li>
