--- a/catalog.html
+++ b/catalog.html
@@ -138,7 +138,9 @@
                   <p class="example-item-description">Информационный сайт для
                     туристов Информационный сайт для
                       туристов Информационный сайт для
-                        туристов</p>
+                        туристов Информационный сайт для
+                          туристов Информационный сайт для
+                            туристов</p>
                   <p class="button example-item-price">9 900 руб.</p>
                 </div>
               </li>
