--- a/catalog.html
+++ b/catalog.html
@@ -49,8 +49,8 @@
                   <div class="toggle toggle-max"></div>
                 </div>
                 <div class="price-controls">
-                  <label class="min-price">от <input name="min-price" type="number" value="0"></label>
-                  <label class="max-price">до <input name="max-price" type="number" value="15000"></label>
+                  <label class="min-price">от <input name="min-price" type="number" placeholder="0"></label>
+                  <label class="max-price">до <input name="max-price" type="number" placeholder="15 000"></label>
                 </div>
               </div>
             </fieldset>
