--- a/catalog.html
+++ b/catalog.html
@@ -122,9 +122,9 @@
               </ul>
               <ul class="up-down-sorting">
                 <li class=" list-parametr current-parametr"><a class="sorting-down" href="#"><img
-                  src="img/icon-down-dir.svg" alt="Сортировка по убыванию"></a></li>
-                <li class="list-parametr"><a class="sorting-up" href="#"><img src="img/icon-up-dir.svg"
-                  alt="По возрастанию"></a></li>
+                  src="img/icon-down-dir.svg" width="11px" height="10px"
+                  alt="Сортировка по убыванию"></a></li>
+                <li class="list-parametr"><a class="sorting-up" href="#"><img src="img/icon-up-dir.svg" width="11px" height="10px" alt="По возрастанию"></a></li>
               </ul>
             </nav>
           </section>
@@ -198,21 +198,21 @@
           </section>
         </div>
       </div>
-      <section class="adress-and-contacts">
+      <section class="address-and-contacts modal-map">
         <h2 class="visually-hidden">Адрес и контакты</h2>
-        <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
-      появится настоящая карта -->
         <div class="map-container">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="1440" height="416" allowfullscreen>
+          </iframe>
           <img src="img/map.png" alt="Карта" width="1440" height="416">
           <img class="map-marker" src="img/map-marker.png" alt="Указатель"
             width="231" height="190">
           <div class="studio-contacts">
             <h3 class="studio-label">Nёrds design studio</h3>
-            <p class="studio-adress">
+            <p class="studio-address">
             191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             </p>
-            <p>тел. +7 (812) 275-75-75</p>
-            <button class="button modal-open" type="button">Напишите нам</button>
+            <p class="tel-number"><a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+            <a href="write-to-us.html" class="button modal-open"> Напишите нам</a>
           </div>
         </div>
       </section>
