--- a/index.html
+++ b/index.html
@@ -72,19 +72,16 @@
           <h2 class="visually-hidden">Наши услуги</h2>
           <ul class="advantages">
             <li class="advantages-item">
-              <img src="img/advantage-red.png" alt="Карточка веб-сайта" width="300" height="146">
               <h3>Веб-сайты</h3>
               <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
               <a class="button" href="#">Заказать</a>
             </li>
             <li class="advantages-item">
-              <img src="img/advantage-green.png" alt="Карточка приложений" width="300" height="146">
               <h3>Приложения</h3>
               <p>Покорите топ-10 приложений в AppStore и Google Play</p>
               <a class="button" href="#">Заказать</a>
             </li>
             <li class="advantages-item">
-              <img src="img/advantage-yellow.png" alt="Карточка презентаций" width="300" height="146">
               <h3>Презентации</h3>
               <p>Вы даже не подозреваете,  насколько вы изумительны!</p>
               <a class="button" href="#">Заказать</a>
@@ -155,21 +152,21 @@
           </ul>
         </section>
       </div>
-      <section class="adress-and-contacts">
+      <section class="address-and-contacts modal-map">
         <h2 class="visually-hidden">Адрес и контакты</h2>
-        <!--Пока что здесь будет картинка карты, после изучения джаваскрипт
-      появится настоящая карта -->
         <div class="map-container">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="1440" height="416" allowfullscreen>
+          </iframe>
           <img src="img/map.png" alt="Карта" width="1440" height="416">
           <img class="map-marker" src="img/map-marker.png" alt="Указатель"
             width="231" height="190">
           <div class="studio-contacts">
             <h3 class="studio-label">Nёrds design studio</h3>
-            <p class="studio-adress">
+            <p class="studio-address">
             191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             </p>
-            <p>тел. +7 (812) 275-75-75</p>
-            <button class="button modal-open" type="button">Напишите нам</button>
+            <p class="tel-number"><a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+            <a href="write-to-us.html" class="button modal-open"> Напишите нам</a>
           </div>
         </div>
       </section>
@@ -225,7 +222,7 @@
           <textarea name="letter" placeholder="В свободной форме"
             id="field-letter"></textarea>
         </p>
-        <button class="button modal-" type="submit">Отправить</button>
+        <button class="button" type="submit">Отправить</button>
       </form>
       <button class="modal-close" type="button">
       </button>
