--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Нёрдс</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-min.css">
   </head>
   <body>
     <header class="main-header">
@@ -273,6 +273,6 @@
       <button class="modal-close" type="button">
       </button>
     </section>
-    <script src="js/modal.js"></script>
+    <script src="js/modal-min.js"></script>
   </body>
 </html>
